<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:id="@+id/nestleLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/nestlelogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginHeading"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nestleLogo"
        android:textStyle="bold"
        android:textColor="#000000"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/login_to_nestle" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginHeading"
        android:id="@+id/emailInputLayoutLogin"
        android:layout_marginTop="32dp"
        android:hint="@string/email_id">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayoutLogin"
        android:id="@+id/passwordInputLayoutLogin"
        app:endIconMode="password_toggle"
        android:layout_marginTop="16dp"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:id="@+id/buttonLogin"
        android:background="#0069D9"
        android:textColor="#FFFFFF" />

    <ProgressBar
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toStartOf="@id/buttonLogin"
        app:layout_constraintTop_toTopOf="@id/buttonLogin"
        android:layout_marginEnd="20dp"
        android:indeterminate="true"
        android:id="@+id/loginButtonProgress"
        android:visibility="gone"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#0069D9"
        android:progressBackgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="@id/buttonLogin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/not_a_member" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerAnchor"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="#FF0000"
            android:text="@string/register_now"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>