<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:id="@+id/nestleLogoRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/nestlelogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerHeading"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nestleLogoRegister"
        android:textStyle="bold"
        android:textColor="#000000"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/register_to_nestle" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerHeading"
        android:id="@+id/emailInputLayoutRegister"
        android:layout_marginTop="32dp"
        android:hint="@string/email_id">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayoutRegister"
        android:id="@+id/passwordInputLayoutRegister"
        app:endIconMode="password_toggle"
        android:layout_marginTop="16dp"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayoutRegister"
        android:id="@+id/nameInputLayoutRegister"
        android:layout_marginTop="16dp"
        android:hint="@string/full_name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cityDropdownRegister"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayoutRegister"
        android:layout_marginTop="16dp"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cityDropdownRegister"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:id="@+id/buttonRegister"
        android:background="#0069D9"
        android:textColor="#FFFFFF" />

    <ProgressBar
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toStartOf="@id/buttonRegister"
        app:layout_constraintTop_toTopOf="@id/buttonRegister"
        app:layout_constraintBottom_toBottomOf="@id/buttonRegister"
        android:layout_marginEnd="20dp"
        android:indeterminate="true"
        android:id="@+id/registerButtonProgress"
        android:visibility="gone"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#0069D9"
        android:progressBackgroundTintMode="multiply"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/already_registered" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginAnchor"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:textColor="#FF0000"
            android:text="@string/login_now"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>