<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.AddProductsActivity">

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:indeterminate="true"
        android:id="@+id/addProductsProgress"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#0069D9"
        android:progressBackgroundTintMode="multiply"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/linearSummary"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/products_summary"
            style="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:text="@string/no_products_selected"
            android:textColor="#000000"
            android:id="@+id/productSummary"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="end"
            android:padding="8dp"
            android:text="@string/submit"
            android:id="@+id/submitProducts"
            android:background="#0069D9"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_products"
        android:id="@+id/addProductsTitle"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearSummary"
        style="@style/TextAppearance.AppCompat.Headline"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/productDropdown"
        app:layout_constraintTop_toBottomOf="@id/addProductsTitle"
        android:layout_marginTop="16dp"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:spinnerMode="dropdown" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/productDropdown"
        android:id="@+id/countProduct"
        android:layout_marginTop="16dp"
        android:hint="@string/product_count">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countProduct"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:text="@string/add_product"
        android:id="@+id/addProduct"
        android:background="#0069D9"
        android:textColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>